--- a/Anime.html
+++ b/Anime.html
@@ -1556,10 +1556,10 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
-                src="https://image.tmdb.org/t/p/original/bkeiYRYgQjJBItx9x3Fnia2XT3t.jpg"
+                src="https://image.tmdb.org/t/p/original/az0jQSgRLezKw5uHaEjPH20NexD.jpg"
                 class="movie-poster"
               />
-              <h2 class="movie-title">Super Cube</h2>
+              <h2 class="movie-title">The Beginning After the End</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text"
@@ -1711,6 +1711,42 @@
                   >
                 </div>
                 <span class="movie-year-text">2023</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://image.tmdb.org/t/p/original/nVmc8K5J7SGMlE6tA5lVzVzAzQ9.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">I Parry Everything</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.5</span
+                  >
+                </div>
+                <span class="movie-year-text">2024</span>
               </div>
               <div class="action-circle">
                 <a href="#" class="icon AddFavorite">
@@ -1988,17 +2024,17 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
-                src="https://image.tmdb.org/t/p/original/ecQ84z2sR0XapZu435MnFuEBzD8.jpg"
+                src="https://image.tmdb.org/t/p/original/5lS0VmKbjsczRxvDvGzricRf1Mb.jpg"
                 class="movie-poster"
               />
-              <h2 class="movie-title">Haikyu!!</h2>
+              <h2 class="movie-title">ISUCA</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text"
                     ><img src="./images/IMDb_logo.png" /> 8.0</span
                   >
                 </div>
-                <span class="movie-year-text">2014</span>
+                <span class="movie-year-text">2015</span>
               </div>
               <div class="action-circle">
                 <a href="#" class="icon AddFavorite">
@@ -2024,17 +2060,91 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
-                src="https://image.tmdb.org/t/p/original/nVmc8K5J7SGMlE6tA5lVzVzAzQ9.jpg"
+                src="https://image.tmdb.org/t/p/original/sTDTy73OYmKY51EK94Mc6AxogzR.jpg"
                 class="movie-poster"
               />
-              <h2 class="movie-title">I Parry Everything</h2>
+              <h2 class="movie-title">BLUE LOCK</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text"
                     ><img src="./images/IMDb_logo.png" /> 8.0</span
                   >
                 </div>
-                <span class="movie-year-text">2024</span>
+                <span class="movie-year-text">2022</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://image.tmdb.org/t/p/original/ujQp5egkJOkDHx4TehlgHePFcRv.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">
+                From Old Country Bumpkin to Master Swordsman
+              </h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.0</span
+                  >
+                </div>
+                <span class="movie-year-text">2025</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://image.tmdb.org/t/p/original/ecQ84z2sR0XapZu435MnFuEBzD8.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Haikyu!!</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.0</span
+                  >
+                </div>
+                <span class="movie-year-text">2014</span>
               </div>
               <div class="action-circle">
                 <a href="#" class="icon AddFavorite">
@@ -2420,6 +2530,42 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
+                src="https://image.tmdb.org/t/p/original/bkeiYRYgQjJBItx9x3Fnia2XT3t.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Super Cube</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 7.0</span
+                  >
+                </div>
+                <span class="movie-year-text">2025</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
                 src="https://image.tmdb.org/t/p/original/7zcIgfFGtHGyvS9tQhCFmjoMu14.jpg"
                 class="movie-poster"
               />
@@ -2719,42 +2865,6 @@
                   >
                 </div>
                 <span class="movie-year-text">2023</span>
-              </div>
-              <div class="action-circle">
-                <a href="#" class="icon AddFavorite">
-                  <div class="tooltip">Add to Favorite</div>
-                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-                </a>
-                <a href="#" class="icon RateIt">
-                  <div class="tooltip">Rate It</div>
-                  <span><i class="fa-solid fa-star"></i></span>
-                </a>
-                <a href="#" class="icon watchlist">
-                  <div class="tooltip">Add to Watchlist</div>
-                  <span><i class="bx bx-list-plus"></i></span>
-                </a>
-                <a href="https://www.youtube.com" class="icon youtube">
-                  <div class="tooltip">Play Trailer</div>
-                  <span><i class="fab fa-youtube"></i></span>
-                </a>
-              </div>
-            </div>
-          </div>
-
-          <div class="movie-item">
-            <div class="movie-content">
-              <img
-                src="https://image.tmdb.org/t/p/original/az0jQSgRLezKw5uHaEjPH20NexD.jpg"
-                class="movie-poster"
-              />
-              <h2 class="movie-title">The Beginning After the End</h2>
-              <div class="movie-rating">
-                <div class="ratings-container">
-                  <span class="movie-rating-text"
-                    ><img src="./images/IMDb_logo.png" /> TBA</span
-                  >
-                </div>
-                <span class="movie-year-text">2025</span>
               </div>
               <div class="action-circle">
                 <a href="#" class="icon AddFavorite">
