--- a/Anime.html
+++ b/Anime.html
@@ -800,6 +800,42 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
+                src="https://image.tmdb.org/t/p/original/mfh6zxYIHSlpRYFpzVcWJ8RAiUj.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Fullmetal Alchemist: Brotherhood</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 9.5</span
+                  >
+                </div>
+                <span class="movie-year-text">2009</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
                 src="https://image.tmdb.org/t/p/original/3kTFL3PAeTyS8gGZAh0iYG6NNjt.jpg"
                 class="movie-poster"
               />
@@ -1747,6 +1783,42 @@
                   >
                 </div>
                 <span class="movie-year-text">2024</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://image.tmdb.org/t/p/original/dqZENchTd7lp5zht7BdlqM7RBhD.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Frieren: Beyond Journey's End</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.0</span
+                  >
+                </div>
+                <span class="movie-year-text">2023</span>
               </div>
               <div class="action-circle">
                 <a href="#" class="icon AddFavorite">
@@ -2851,42 +2923,6 @@
             </div>
           </div>
 
-          <div class="movie-item">
-            <div class="movie-content">
-              <img
-                src="https://image.tmdb.org/t/p/original/dqZENchTd7lp5zht7BdlqM7RBhD.jpg"
-                class="movie-poster"
-              />
-              <h2 class="movie-title">Frieren: Beyond Journey's End</h2>
-              <div class="movie-rating">
-                <div class="ratings-container">
-                  <span class="movie-rating-text"
-                    ><img src="./images/IMDb_logo.png" /> TBA</span
-                  >
-                </div>
-                <span class="movie-year-text">2023</span>
-              </div>
-              <div class="action-circle">
-                <a href="#" class="icon AddFavorite">
-                  <div class="tooltip">Add to Favorite</div>
-                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-                </a>
-                <a href="#" class="icon RateIt">
-                  <div class="tooltip">Rate It</div>
-                  <span><i class="fa-solid fa-star"></i></span>
-                </a>
-                <a href="#" class="icon watchlist">
-                  <div class="tooltip">Add to Watchlist</div>
-                  <span><i class="bx bx-list-plus"></i></span>
-                </a>
-                <a href="https://www.youtube.com" class="icon youtube">
-                  <div class="tooltip">Play Trailer</div>
-                  <span><i class="fab fa-youtube"></i></span>
-                </a>
-              </div>
-            </div>
-          </div>
-
           <!-- Add more movie items as needed -->
         </div>
 
@@ -3068,3 +3104,4 @@
     <script src="./JS/filterSidebar.js"></script>
   </body>
 </html>
+
